--- a/.lando.yml
+++ b/.lando.yml
@@ -22,6 +22,6 @@ services:
       - appserver
 events:
   pre-start:
-    - appserver: lando/pre-start.sh
+    - appserver: .lando/pre-start.sh
   post-start:
-    - appserver: lando/post-start.sh
+    - appserver: .lando/post-start.sh
